--- a/src/App.css
+++ b/src/App.css
@@ -11,25 +11,8 @@ form {
   margin: 0 auto;
 }
 
-.Popup {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1000;
-}
 
-.Popup > div {
-  background-color: #fff;
-  padding: 1rem;
-  border-radius: 4px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-}
+
 .PopupOverlay {
   position: fixed;
   top: 0;
@@ -88,4 +71,24 @@ form {
   max-height: 200px;
   border: 1px solid #ccc;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+.in{
+  
+  height: 2em;
+  width: 30em;
+  border-radius: 2em;
+
+}
+.sub{
+background-color: blue;
+color:white;
+border: none;
+outline: none;
+border-radius: 1em;
+
+}
+.lab{
+  
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
 }
